--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
   <script type="module">
     // --- 1) Replace with your Firebase config from the Firebase console ---
     const firebaseConfig = {
-      apiKey: "PASTE_YOURS",
-      authDomain: "PASTE_YOURS.firebaseapp.com",
-      databaseURL: "https://PASTE_YOURS-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "PASTE_YOURS",
-      storageBucket: "PASTE_YOURS.appspot.com",
-      messagingSenderId: "PASTE_YOURS",
-      appId: "PASTE_YOURS"
+     apiKey: "AIzaSyDqK370QK56_Fvm2lJH5zEVox-aFhi_eo0",
+  authDomain: "trivia-team-generator.firebaseapp.com",
+  databaseURL: "https://trivia-team-generator-default-rtdb.firebaseio.com",
+  projectId: "trivia-team-generator",
+  storageBucket: "trivia-team-generator.firebasestorage.app",
+  messagingSenderId: "832962439903",
+  appId: "1:832962439903:web:503349a103ecd18d5d576a",
+  measurementId: "G-VBLS86G74D"
     };
     // ---------------------------------------------------------------------
 
@@ -214,3 +215,4 @@
   </div>
 </body>
 </html>
+
